app/src/main/java/com/example/realtimechatapp/core/error/AuthDomainError.kt
package com.example.realtimechatapp.core.error

interface AuthDomainError {
}